--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,9 +19,9 @@
                 Sign Up for TechTalk.ng
             </div>
             <div class="formedit">
-                <form action="{{ url_for('welcome') }}" id="form-control" class="js-form">
+                <form action="{{ url_for('index') }}" id="form-control" class="js-form">
                     <div class="email-entry">
-                        <label class="e1" for="email">Username:</label>
+                        <label class="e1" for="email">Email:</label>
                         <!-- <span class="input-group-addon" id="basic-addon1">@</span> --><br>
                         <input placeholder="Enter Your Email" class="e1Entry" type="email">
                     </div>
