--- a/templates/blog.html
+++ b/templates/blog.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-551-stand-blog
                 <a class="nav-link" href="{{ url_for('post_details') }}">Post Details</a>
               </li>
               <li class="nav-item">
-                <!-- <a class="nav-link" href="{{ url_for('contact' )}}">Contact Us</a> -->
+                <a class="nav-link" href="{{ url_for('welcome' )}}">Create A Post</a>
               </li>
             </ul>
           </div>
@@ -101,17 +101,9 @@ https://templatemo.com/tm-551-stand-blog
         <div class="row">
           <div class="col-lg-8">
             <div class="all-blog-posts">
-              <div class="row">
-                <div class="col-lg-6">
-                <!-- {% include 'content-layout.html' %} -->
-                <!-- <div class="col-lg-12">
-                  <ul class="page-numbers">
-                    <li><a href="#">1</a></li>
-                    <li class="active"><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
-                  </ul>
-                </div> -->
+                  
+                    {% include 'content-layout.html' %}
+                  
               </div>
             </div>
           </div>
