--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,7 +9,7 @@
     <div class="navbar-collapse collapse  p-3" id="navbarsExample01" style="border-radius: 20px; margin-top: 15px;">
       <ul class="navbar-nav me-auto mb-2">
         <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="{{ url_for('signup') }}">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="{{ url_for('blog') }}">Home</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="#"></a>
@@ -20,8 +20,8 @@
         <li class="nav-item dropdown ">
           <a class="nav-link dropdown-toggle text-light" href="#" data-bs-toggle="dropdown" aria-expanded="false">See More</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item text-light" href="#">Profile</a></li>
-            <li><a class="dropdown-item text-light" href="#">Find Users</a></li>
+            <li><a class="dropdown-item text-light" href="">Profile</a></li>
+            <li><a class="dropdown-item text-light" href="#">Find People</a></li>
             <li><a class="dropdown-item text-light" href="#">Something else here</a></li>
           </ul>
         </li>
