--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 .body {
-    background-color: rgb(154, 131, 110);
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('./pic21.jpeg');
+    background-color: rgb(209, 209, 209);
+    /* background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('./os.jpg'); */
     display: grid;
     place-items: center;
 }
@@ -76,7 +76,7 @@
 
 .header {
     margin-top: 20px;
-    color: antiquewhite;
+    color: rgb(80, 80, 80);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: x-large;
     padding: 5px 5px 5px 5px;
@@ -187,7 +187,7 @@
 
 .header2 {
     font-size: large;
-    color: antiquewhite;
+    color: rgb(0, 0, 0);
     transition: color 1s ease-in-out;
 }
 .empty {
