--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,34 +1,20 @@
-<div class="container">
-    <footer class="py-3 my-4 ">
-      <ul class="nav justify-content-center border-bottom border-light pb-3 mb-2">
-        <!-- <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Features</a>
-        </li> -->
-        <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-light">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a href="mailto:rokarigithub@outlook.com?subject=FAQs&body=Hi%20my%20name%20is%20%3Cyour%20name%3E%0D%0Amy%20question%20is%20%3Cyour%20question%3E%0D%0A" 
-            class="nav-link px-2 text-light"
-            >FAQs</a>
-        </li>
-        <li class="nav-item">
-          <a
-            href="mailto:rokarigithub@outlook.com?subject=%3Cinput%20subject%3E&body=Hi%2C%20my%20name%20is%20%3Ccustomer%20name%3E.%20I'm%20emailing%20you%20concerning%20%3Creason-for-email%3E%0D%0A%3Cany%20other%20text%20here%3E"
-            class="nav-link px-2 text-light"
-            >Contact Us</a
-          >
-        </li>
-      </ul>
-      <div class="text-center">
-        <p class="text-light">
-          copyright 2023,
-          <a href="https://github.com/rokarioss">Rokari builds</a>, TechTalk Inc&#174;.
-        </p>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <ul class="social-icons">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <!-- <li><a href="#">Behance</a></li> -->
+          <li><a href="#">Linkedin</a></li>
+          <!-- <li><a href="#">Dribbble</a></li> -->
+        </ul>
       </div>
-    </footer>
+      <div class="col-lg-12">
+        <div class="copyright-text">
+          <p>Copyright 2023, <a href="">Rokari Builds</a>, TechTalk inc &#174;</p>
+        </div>
+      </div>
+    </div>
   </div>
-  
+</footer>
