--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,34 +1,28 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-<nav id="navbar" class="navbar navbar-dark fixed-top border-bottom border-light" aria-label="First navbar example">
-  <div class="container-fluid">
-    <a class="navbar-brand text-light" href="{{ url_for('blog') }}">TechTalk.ng</a>
-    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="navbar-collapse collapse  p-3" id="navbarsExample01" style="border-radius: 20px; margin-top: 15px;">
-      <ul class="navbar-nav me-auto mb-2">
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="{{ url_for('blog') }}">Home</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li> -->
-        <li class="nav-item">
-          <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
-        </li>
-        <li class="nav-item dropdown ">
-          <a class="nav-link dropdown-toggle text-light" href="#" data-bs-toggle="dropdown" aria-expanded="false">See More</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item text-light" href="">Profile</a></li>
-            <li><a class="dropdown-item text-light" href="#">Find People</a></li>
-            <li><a class="dropdown-item text-light" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form role="search">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-      </form>
+<header class="">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="{{ url_for('index') }}"><h2>TechTalk<em>.</em>Ng</h2></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('index') }}">Home
+              <!-- <span class="sr-only">(current)</span> -->
+            </a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('blog') }}">Topics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('post_details') }}">Post Details</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('welcome') }}">Create A post</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</header>
