--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,68 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style2.css') }}" />
+    <title>Modern Login Page | AsmrProg</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web | Sign In</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/templatemo-stand-blog.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/owl.css') }}">
-</head>
-
-<body class="body">
-  <div class="parent">
-    <div class="child">
-        <div class="header">
-            Sign In To TechTalk.ng
-        </div>
-        <div class="formedit">
-            <form action="{{ url_for('index') }}" id="form-control" class="js-form">
-                <div class="email-entry">
-                    <label class="e1" for="email">Email:</label>
-                    <!-- <span class="input-group-addon" id="basic-addon1">@</span> --><br>
-                    <input placeholder="Enter Your Email" class="e1Entry" type="email">
-                </div>
-                </br>
-                <div class="pass-entry">
-                    <label for="password" class="e1">Password:</label><br>
-                    <input placeholder="Enter Password" class="e1Pass" type="password">
-                    <div class="btn-center"><button id="smb" type="submit" class="btn-smb">Sign In</button></div>
-
-                </div>
-                <script src="{{ url_for('static', filename='js/functions.js') }}"></script>
-            </form>
-        </div>
-    </div>
-</div>
-<script src="{{ url_for('static', filename='js/functions.js') }}"></script>
-<div class="alternate">
-    <h3 class="header2">You New Here?</h3>
-    <br>
-    <a href="{{ url_for('signup') }}"><input class="signinbtn" type="button" value="Sign Up"></a>
-</div>
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <ul class="social-icons">
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-          <!-- <li><a href="#">Behance</a></li> -->
-          <li><a href="#">Linkedin</a></li>
-          <!-- <li><a href="#">Dribbble</a></li> -->
-        </ul>
+  <body>
+    <div class="container" id="container">
+      <div class="form-container sign-up">
+        <form action="{{ url_for('blog') }}">
+          <h1>Create Account</h1>
+          <div class="social-icons">
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-google-plus-g"></i
+            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <span>or use your email for registeration</span>
+          <input type="text" placeholder="Name" />
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <button>Sign Up</button>
+        </form>
       </div>
-      <div class="col-lg-12">
-        <div class="copyright-text">
-          <p>Copyright 2023, <a href="">Rokari Builds</a>, TechTalk inc &#174;</p>
+      <div class="form-container sign-in">
+        <form action="{{url_for('index')}}">
+          <h1>Sign In</h1>
+          <div class="social-icons">
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-google-plus-g"></i
+            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <span>or use your email password</span>
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <a href="#">Forget Your Password?</a>
+          <button>Sign In</button>
+        </form>
+      </div>
+      <div class="toggle-container">
+        <div class="toggle">
+          <div class="toggle-panel toggle-left">
+            <h1>Welcome!</h1>
+            <p>Enter your personal details to use all of site features</p>
+            <button class="hidden" id="login">Sign In</button>
+          </div>
+          <div class="toggle-panel toggle-right">
+            <h1>Welcome Back!</h1>
+            <p>
+              Register with your personal details to use all of site features
+            </p>
+            <button class="hidden" id="register">Sign Up</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
-</body>
 
+    <script src="{{ url_for('static', filename = 'js/script2.js') }}"></script>
+  </body>
 </html>
