--- a/templates/write.html
+++ b/templates/write.html
@@ -12,10 +12,9 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/bootstrap.css.map') }}"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/templatemo-stand-blog.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/owl.css') }}">
   </head>
   <style>
     html {
@@ -23,16 +22,29 @@
     }
   </style>
   <body class="body">
+
+    {% include 'nav.html' %}
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    {% include 'nav.html' %}
 
     <div class="container rounded-2 ">
       {% include 'post.html' %}
     </div>
+        <!-- Bootstrap core JavaScript -->
+        <script src="{{ url_for('static',filename='js/jquery.min.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/bootstrap.bundle.min.js') }}"></script>
+    
+        <!-- Additional Scripts -->
+        <!-- <script src="{{ url_for('static', filename='js/functions.js') }}"></script> -->
+        <script src="{{ url_for('static',filename='js/custom.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/owl.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/slick.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/isotope.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/accordions.js') }}"></script>
 
 
     {% include 'footer.html' %}
