--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,24 +7,43 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style2.css') }}" />
-    <title>Modern Login Page | AsmrProg</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename = 'css/style2.css') }}"
+    />
+    <!-- Bootstrap core CSS -->
+    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/templatemo-stand-blog.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/owl.css') }}">
+<!--
+    <title>Sign in | TechTalk.Ng</title>
   </head>
 
   <body>
+    <!-- ***** Preloader Start ***** -->
+    <div id="preloader">
+      <div class="jumper">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <!-- ***** Preloader End ***** -->
+
     <div class="container" id="container">
       <div class="form-container sign-up">
         <form action="{{ url_for('blog') }}">
-          <h1>Create Account</h1>
+          <h1>Create An Account</h1>
           <div class="social-icons">
-            <a href="#" class="icon"
-              ><i class="fa-brands fa-google-plus-g"></i
-            ></a>
-            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-            <a href="#" class="icon"
-              ><i class="fa-brands fa-linkedin-in"></i
-            ></a>
+            <!-- <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a> -->
+            <!-- <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a> -->
+            <!-- <a href="#" class="icon"><i class="fa-brands fa-github"></i></a> -->
+            <!-- <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a> -->
           </div>
           <span>or use your email for registeration</span>
           <input type="text" placeholder="Name" />
@@ -36,7 +55,7 @@
       <div class="form-container sign-in">
         <form action="{{url_for('index')}}">
           <h1>Sign In</h1>
-          <div class="social-icons">
+          <!-- <div class="social-icons">
             <a href="#" class="icon"
               ><i class="fa-brands fa-google-plus-g"></i
             ></a>
@@ -45,7 +64,7 @@
             <a href="#" class="icon"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
-          </div>
+          </div> -->
           <span>or use your email password</span>
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
@@ -56,20 +75,33 @@
       <div class="toggle-container">
         <div class="toggle">
           <div class="toggle-panel toggle-left">
-            <h1>Welcome!</h1>
-            <p>Enter your personal details to use all of site features</p>
+            <h1>Lets Get Started!</h1>
+            <p class="lead text-light">Enter your personal details to use all of site features</p>
             <button class="hidden" id="login">Sign In</button>
           </div>
           <div class="toggle-panel toggle-right">
             <h1>Welcome Back!</h1>
-            <p>
+            <p class="lead text-light">
               Register with your personal details to use all of site features
             </p>
+            <br />
+            <em>Or</em>
             <button class="hidden" id="register">Sign Up</button>
           </div>
         </div>
       </div>
     </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{ url_for('static',filename='js/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/bootstrap.bundle.min.js') }}"></script>
+
+    <!-- Additional Scripts -->
+    <!-- <script src="{{ url_for('static', filename='js/functions.js') }}"></script> -->
+    <script src="{{ url_for('static',filename='js/custom.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/owl.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/slick.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/isotope.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/accordions.js') }}"></script>
 
     <script src="{{ url_for('static', filename = 'js/script2.js') }}"></script>
   </body>
