--- a/templates/write.html
+++ b/templates/write.html
@@ -22,6 +22,15 @@
     }
   </style>
   <body class="body">
+        <!-- ***** Preloader Start ***** -->
+        <div id="preloader">
+          <div class="jumper">
+              <div></div>
+              <div></div>
+              <div></div>
+          </div>
+      </div>  
+      <!-- ***** Preloader End ***** -->
 
     {% include 'nav.html' %}
 
