--- a/static/css/templatemo-stand-blog.css
+++ b/static/css/templatemo-stand-blog.css
@@ -167,7 +167,7 @@ h1,h2,h3,h4,h5,h6 {
 
 /* Header Style */
 header {
-	/* position: absolute; */
+	position: relative;
 	z-index: 99999;
 	width: 100%;
 	height: 100px;
